--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
-node_modules
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/vidly/node_modules
+/vidly/.pnp
+.pnp.js
+
+# testing
+/vidly/coverage
+
+# production
+/vidly/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
