--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/components/node_modules
+/components/.pnp
 /vidly/node_modules
 /vidly/.pnp
 .pnp.js
